Segundo commit ejercicio1
Signed-off-by: 2h 2h <2h@ereglada.saleszar.com>

--- a/Ejercicio1.html
+++ b/Ejercicio1.html
@@ -14,33 +14,33 @@
     color: black;
 	text-align: center;
     background-color: green;
-	height: 30px;
+	height: 70px;
   }
   .green2
   {
     color: black;
 	text-align: center;
     background-color: lime;
-	height: 30px;
+	height: 70px;
   }
     .green3
   {
     color: black;
 	text-align: center;
     background-color: #009D71;
-	height: 30px;
+	height: 70px;
   }
   .red
   {
     color: black;
     background-color: red;
-	height: 50px;
+	height: 150px;
   }
   .yellow
   {
     color: black;
     background-color: yellow;
-	height: 50px;
+	height: 150px;
   }
   
 }
@@ -55,25 +55,26 @@
 		
 		<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" >
 			<div class="col-md-3 col-lg-3 col-sm-3 red" style="border:2px solid">1</div>
-			<div class="col-md-3 col-lg-3 col-sm-3 red" style="border:2px solid">4</div>
-			<div class="col-md-3 col-lg-3 col-sm-3 red" style="border:2px solid">2</div>
+			<div class="col-lg-3 offset-lg-6 red" style="border:2px solid">4</div>
+			<div class="col-md-3 col-lg-3 offset-lg-3 col-sm-3 red" style="border:2px solid">2</div>
 			<div class="col-md-3 col-lg-3 col-sm-3 red" style="border:2px solid">3</div>
 		</div>
-		
+	
 		<div class="row">
 			<div class="col-sm-12 col-md-12 col-lg-12 green2" style="border:2px solid">MIDDLE</div>
 		</div>
 		
-		<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" >
-			<div class="col-md-3 col-lg-3 col-sm-3 yellow" style="border:2px solid">A</div>
-			<div class="col-md-3 col-lg-3 col-sm-3 yellow" style="border:2px solid">B</div>
-			<div class="col-md-3 col-lg-3 col-sm-3 yellow" style="border:2px solid">C</div>
-			<div class="col-md-3 col-lg-3 col-sm-3 yellow" style="border:2px solid">S</div>
+		<div class="col-sm-12 col-md-12 col-lg-12">
+		<div class="col-md-3 col-lg-3 col-sm-3 yellow" style="border:2px solid">A</div>
+		<div class="col-md-3 col-lg-3 col-sm-3 yellow" style="border:2px solid">B</div>
+		<div class="col-md-3 col-lg-3 col-sm-3 yellow" style="border:2px solid">C</div>
+		<div class="col-md-3 col-lg-3 col-sm-3 yellow" style="border:2px solid">S</div>
 		</div>
 		
 		<div class="row">
 			<div class="col-sm-12 col-md-12 col-lg-12 green3" style="border:2px solid">FOOTER</div>
 		</div>
+		
 	</div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
