--- a/Ejercicio1.html
+++ b/Ejercicio1.html
@@ -54,24 +54,23 @@
 		</div>
 		
 		<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" >
-			<div class="col-md-3 col-lg-3 col-sm-3 red" style="border:2px solid">1</div>
-			<div class="col-lg-3 offset-lg-6 red" style="border:2px solid">4</div>
-			<div class="col-md-3 col-lg-3 offset-lg-3 col-sm-3 red" style="border:2px solid">2</div>
-			<div class="col-md-3 col-lg-3 col-sm-3 red" style="border:2px solid">3</div>
+			<div class="col-md-3 col-md-flex-last col-lg-3 col-xs-6 red" style="border:2px solid">1</div>
+			<div class="col-md-3 col-md-flex-first col-lg-3 offset-lg-6 red" style="border:2px solid">4</div>
+			<div class="col-md-3 col-md-flex-second col-lg-3 offset-lg-3 col-xs-6 red" style="border:2px solid">2</div>
+			<div class="col-md-3 col-md-flex-third col-lg-3 red" style="border:2px solid">3</div>
 		</div>
 	
 		<div class="row">
 			<div class="col-sm-12 col-md-12 col-lg-12 green2" style="border:2px solid">MIDDLE</div>
 		</div>
 		
-		<div class="col-sm-12 col-md-12 col-lg-12">
-		<div class="col-md-3 col-lg-3 col-sm-3 yellow" style="border:2px solid">A</div>
-		<div class="col-md-3 col-lg-3 col-sm-3 yellow" style="border:2px solid">B</div>
-		<div class="col-md-3 col-lg-3 col-sm-3 yellow" style="border:2px solid">C</div>
-		<div class="col-md-3 col-lg-3 col-sm-3 yellow" style="border:2px solid">S</div>
-		</div>
-		
 		<div class="row">
+		
+			<div class="col-md-3 col-lg-3 col-sm-3 yellow" style="border:2px solid">A</div>
+			<div class="col-md-3 col-lg-3 col-sm-3 yellow" style="border:2px solid">B</div>
+			<div class="col-md-3 col-lg-3 col-sm-3 yellow" style="border:2px solid">C</div>
+			<div class="col-md-3 col-lg-3 col-sm-3 yellow" style="border:2px solid">D</div>
+			
 			<div class="col-sm-12 col-md-12 col-lg-12 green3" style="border:2px solid">FOOTER</div>
 		</div>
 		
